@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company
class Ship
class Container
class Cargo_Manifest_Load

Company "1" -- "*" Ship: contains >
Ship "1" -- "*" Cargo_Manifest_Load: associated to >
Container "*" -- "*" Cargo_Manifest_Load: associated to >


class Company {

}

class Ship{
 - mmsi
 - shipName
 - imo
 - num_energy_gen
 - gen_pow_out
 - callSign
 - vesselType
 - length
 - width
 - capacity
 - draft
}

class Container{
-id
-check_digit
-iso
-weight
-max_weight
-max_weight_incl
-max_volume
-refrigerated
-certificate
-repair_recomendation
}

class Cargo_Manifest_Load{
-container_id
-container_position
-container_gross_weight
-status
}

@enduml